Update to current job titles.

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -13,7 +13,7 @@
 catherine-brobston:
   name: Catherine Brobston
   sort_name: Brobston
-  role: Outreach & Support
+  role: Product and Research Manager
   bio: >
     Catherine has spent most of her career in the education space, first in development and later at a startup
     working with education users. In 2020 she graduated with an MLIS from CUNY, spending time during the program
@@ -162,7 +162,7 @@ sabelo-mhlambi:
 clare-stanton:
   name: Clare Stanton
   sort_name: Stanton
-  role: Communications & Outreach
+  role: Product and Research Manager
   bio: >
     Clare's true occupation is as a milliner, creating multiple hats for herself everywhere she goes.
     She's worked in every department of a photography gallery, as the event coordinator/alumni liaison/substitute teacher
