--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -37,10 +37,10 @@ matteo-cargnelutti:
     the opportunity to work with clients of all sizes on both sides of the
     Atlantic, from local nonprofits to Fortune 500 companies. He has joined
     LIL driven by a passion for the open web and a desire to explore different
-    scaling challenges.
+    scaling challenges. His work at LIL focuses on Perma.cc and web archiving technology research. 
   email: mcargnelutti@law.harvard.edu
-  website:
-  twitter_account_name: macargnelutti
+  website: https://matteocargnelutti.dev
+  twitter_account_name: 
   github_account_name: matteocargnelutti
   image: matteo-cargnelutti.jpg
   affiliated: true
