Updated titles for Becky and myself

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -31,7 +31,7 @@ catherine-brobston:
 matteo-cargnelutti:
   name: Matteo Cargnelutti
   sort_name: Cargnelutti
-  role: Senior Developer
+  role: Senior Software Engineer
   bio: >
     Matteo has been building for the web for most of his career. He has had
     the opportunity to work with clients of all sizes on both sides of the
@@ -50,7 +50,7 @@ matteo-cargnelutti:
 rebecca-cremona:
   name: Rebecca Cremona
   sort_name: Cremona
-  role: Senior Developer
+  role: Senior Software Engineer
   bio: >
     Becky was a student of physics and religion before becoming a
     faculty assistant in the Harvard SEAS Artificial Intelligence
