MC -> Make bio more generic

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -19,7 +19,7 @@ matteo-cargnelutti:
     the opportunity to work with clients of all sizes on both sides of the
     Atlantic, from local nonprofits to Fortune 500 companies. He has joined
     LIL driven by a passion for the open web and a desire to explore different
-    scaling challenges. His work at LIL focuses on Perma.cc and web archiving technology research. 
+    scaling challenges. His work at LIL focuses on digital preservation and open knowledge.
   email: mcargnelutti@law.harvard.edu
   website: https://matteocargnelutti.dev
   twitter_account_name: 
