--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -44,7 +44,8 @@ jobs:
         id: pages
         uses: actions/configure-pages@v4
       - name: Build with Jekyll
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination "./_site"
+        working-directory: "./app"
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination "../_site"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
