--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Build with Jekyll
         working-directory: "./app"
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination "../_site"
+        run: bundle exec jekyll build --destination "../_site"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
