--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -140,7 +140,7 @@ aristana-scourtas:
   sort_name: Scourtas
   role: Product and Research Manager
   bio: >-
-    Ari comes to LIL from the world of applied AI and scientific software engineering, where she tackled topics such as wildfire smoke detection, AI reproducibility, and building open-source contributor communities. She’s held many roles in the past, including software engineer, project manager, community organizer, library assistant, and research scientist, and is thrilled to combine all of these in her new role at LIL to create tools for just access to information.
+    Ari comes to LIL from the world of applied AI and scientific software engineering, where she tackled topics such as wildfire smoke detection, AI reproducibility, and building open-source contributor communities. She’s held many roles in the past, including software engineer, project manager, community organizer, library assistant, and research scientist, and is thrilled to combine all of these in her new role at LIL to create tools for just access to information. She is especially excited about the intersections of information, justice, and technology.
   email: ascourtas@law.harvard.edu
   website:
   github_account_name: ascourtas
