--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,11 @@ server {
 
     merge_slashes off;
     
-    error_page 404 =404 /404/;
+    error_page 404 /404.html;
+
+    location = 404.html {
+        internal;
+    }
 
     location / {
         root   /usr/share/nginx/html;
