--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -310,7 +310,7 @@ katy-ilonka-gero:
 maxwell-neely-cohen:
   name: Maxwell Neely-Cohen
   sort_name: Neely-Cohen
-  role: Contributing Editor
+  role: Fellow and Contributing Editor
   bio: >-
     Max is a novelist, essayist, and editor who loves figuring out how to write about emerging fields, tools, and practices. Outside of his literary ventures, his work in theater, technology, music, video games, and dance have been acclaimed by _The New York Times_, _Frieze_, and _The Financial Times_. He is currently the publisher of The HTML Review and Wikipedian-In-Residence for the National Book Foundation. He is obsessed with libraries and archives.
   email:
