--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -411,7 +411,7 @@ karen-beck:
 sankalp-bhatnagar:
   name: Sankalp Bhatnagar
   sort_name: Bhatnagar
-  role: Fellow
+  role: 2022-2024 Research Fellow
   website: http://www.linkedin.com/in/sankalpbisme
   affiliated: true
 
